--- a/MyWebsite/Views/Projects/Index.cshtml
+++ b/MyWebsite/Views/Projects/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="container center-div z-depth-5 darkBox">
         <ul>
             <li><a href='@Url.Action("Index", "Budgets")'; class="purple-hover">The Painless Budget</a></li>
-            <li><a href='@Url.Action("Index", "Weather")'; class="purple-hover">Weather App (in progress)</a></li>
+            <li><a href='@Url.Action("Index", "OpenWeather")'; class="purple-hover">Weather App (in progress)</a></li>
         </ul>
     </div>
 </div>
