--- a/MyWebsite/Views/Home/Index.cshtml
+++ b/MyWebsite/Views/Home/Index.cshtml
@@ -10,11 +10,11 @@
 
 <div class="container center-div z-depth-5" style="background-color:#020305; margin-top:-200px; margin-bottom:1px; z-index: 100; text-align:center; width:55%; padding:10px; border: .5px dotted #cfd8dc;">
     <ul id="tech-used">
-        <li>C#</li><li>ASP.NET MVC</li><li>RESTful APIs</li><li>LINQ</li>
-        <li>Entity Framework</li><li>MS Visual Studio</li><li>Microsoft SQL Server</li>
+        <li>C#</li><li>ASP.NET MVC 5</li><li>ASP.NET Core</li><li>RESTful APIs</li><li>LINQ</li>
+        <li>Entity Framework</li><li>MS Visual Studio 2017</li><li>Microsoft SQL Server</li>
         <li>SSMS</li><li>Bootstrap</li><li>Materialize</li><li>Kendo UI</li>
-        <li>JavaScript</li><li>jQuery</li><li>JSON</li><li>AJAX</li><li>HTML/CSS</li>
-        <li>Git</li><li>Bash</li><li>WordPress</li><li>OOP Concepts</li>
+        <li>JavaScript</li><li>jQuery</li><li>JSON</li><li>Ajax</li><li>HTML/CSS</li>
+        <li>Git</li><li>WordPress</li><li>AWS</li><li>Azure</li>
     </ul>
 </div>
 
