--- a/MyWebsite/Views/OpenWeather/ManageWeatherAccount.cshtml
+++ b/MyWebsite/Views/OpenWeather/ManageWeatherAccount.cshtml
@@ -8,7 +8,7 @@
     <h3 style="text-align: center; margin: 50px 0 30px; color: black !important;">Manage Weather Account</h3>
 
     <div align="center">
-        <a href='@Url.Action("Index", "Weather")' ; class="waves-effect waves-light btn-large black-text z-depth-1 weatherBtn"><i style="color:#ff7733;" class="fas fa-backward"></i></a>
+        <a href='@Url.Action("Index", "OpenWeather")' ; class="waves-effect waves-light btn-large black-text z-depth-1 weatherBtn"><i style="color:#ff7733;" class="fas fa-backward"></i></a>
     </div>
     
     <div>
