--- a/MyWebsite/Views/Budgets/BudgetInsights.cshtml
+++ b/MyWebsite/Views/Budgets/BudgetInsights.cshtml
@@ -6,7 +6,9 @@
     <a href='@Url.Action("Index", "Budgets")' ; class="waves-effect waves-light btn-large underline-hover grey darken-4" style="font-weight: bold; font-size: 20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
 </div>
 
-<div class="row" style="padding: 80px;">
+<h4 style="margin-top:55px; margin-bottom:25px; font-weight:bold; text-align:center">Budget Insights</h4>
+
+<div class="row" style="padding: 60px;">
     <div class="col s12">
         <ul class="tabs tabs-fixed-width z-depth-1">
             <li class="tab col s3"><a href="#tab1">Average Spending</a></li>
